
syntax = "proto3";

package tosproject;

//Declare java package
option java_multiple_files = true;

option java_package = "com.tosproject.grpcenterprise";

option java_outer_classname = "grpcEnterpriseServiceImpl";

//Define Member Service Login - Unary
service LoginService {
	
	rpc login(LoginRequest)  returns(LoginResponse) {};
	
		
}

message LoginRequest{
	string firstname = 1;
	string lastname = 2;
	int32 membershipNumber = 3;
}

message LoginResponse{
	string message = 1;	
}
